--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,11 @@
   "compilerOptions": {
     "target": "ESNext",
     "useDefineForClassFields": true,
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "lib": [
+      "DOM",
+      "DOM.Iterable",
+      "ESNext"
+    ],
     "allowJs": false,
     "skipLibCheck": true,
     "esModuleInterop": false,
@@ -15,19 +19,67 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["vite-plugin-svgr/client"],
+    "types": [
+      "vite-plugin-svgr/client"
+    ],
     "baseUrl": "./",
     "paths": {
-      "@App/*": ["src/App/*"],
-      "@assets/*": ["src/assets/*"],
-      "@pages/*": ["src/pages/*"],
-      "@components/*": ["src/components/*"],
-      "@/*": ["src/*"],
-      "@Header/*": ["src/components/Header/*"],
-      "@Footer/*": ["src/components/Footer/*"]
+      "@App/*": [
+        "src/App/*"
+      ],
+      "@assets/*": [
+        "src/assets/*"
+      ],
+      "@pages/*": [
+        "src/pages/*"
+      ],
+      "@components/*": [
+        "src/components/*"
+      ],
+      "@/*": [
+        "src/*"
+      ],
+      "@Header/*": [
+        "src/components/Header/*"
+      ],
+      "@Footer/*": [
+        "src/components/Footer/*"
+      ],
+      "@Textbook/*": [
+        "src/pages/Textbook/*"
+      ],
+      "@hooks/*": [
+        "src/hooks/*"
+      ],
+      "@constants/*": [
+        "src/constants/*"
+      ],
+      "@redux/*": [
+        "src/redux/*"
+      ],
+      "@action-types/*": [
+        "src/redux/action-types/*"
+      ],
+      "@actions/*": [
+        "src/redux/actions/*"
+      ],
+      "@reducer/*": [
+        "src/redux/reducer/*"
+      ],
+      "@api/*": [
+        "src/redux/api/*"
+      ],
+      "@selectors/*": [
+        "src/redux/selectors/*"
+      ],
+      "@utils/*": [
+        "src/utils/*"
+      ]
     }
   },
-  "include": ["src"],
+  "include": [
+    "src"
+  ],
   "references": [
     {
       "path": "./tsconfig.node.json"
