feat: add raw Textbook

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -74,6 +74,12 @@
       ],
       "@utils/*": [
         "src/utils/*"
+      ],
+      "@Loader/*": [
+        "src/components/Loader/*"
+      ],
+      "@types/*": [
+        "src/types/*"
       ]
     }
   },
