feat: add raw words

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -80,6 +80,9 @@
       ],
       "@types/*": [
         "src/types/*"
+      ],
+      "@Modal/*": [
+        "src/components/Modal/*"
       ]
     }
   },
