feat: add WordTicket buttons

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -83,6 +83,9 @@
       ],
       "@Modal/*": [
         "src/components/Modal/*"
+      ],
+      "@AudioButton/*": [
+        "src/components/AudioButton/*"
       ]
     }
   },
