feat: add games entry

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -86,6 +86,9 @@
       ],
       "@AudioButton/*": [
         "src/components/AudioButton/*"
+      ],
+      "@Games/*": [
+        "src/pages/Games/*"
       ]
     }
   },
