feat: add sprint game

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -98,6 +98,12 @@
       ],
       "@GroupPicker/*": [
         "src/components/GroupPicker/*"
+      ],
+      "@SprintGame/*": [
+        "src/hooks/SprintGame/*"
+      ],
+      "@CircleTimer/*": [
+        "src/components/CircleTimer/*"
       ]
     }
   },
