feat: add login layout

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -104,6 +104,9 @@
       ],
       "@CircleTimer/*": [
         "src/components/CircleTimer/*"
+      ],
+      "@Auth/*": [
+        "src/pages/Auth/*"
       ]
     }
   },
