feat: add userWords

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -107,6 +107,9 @@
       ],
       "@Auth/*": [
         "src/pages/Auth/*"
+      ],
+      "@AppRoutes/*": [
+        "src/App/AppRoutes/*"
       ]
     }
   },
