--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^8.0.5",
     "react-router": "^6.10.0",
     "react-router-dom": "^6.10.0",
+    "react-toastify": "^9.1.2",
     "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
